RESOLVED FIXED241308
[iOS 15] Unable to type in Google Docs with a hardware keyboard without refocusing editor
https://bugs.webkit.org/show_bug.cgi?id=241308
Summary [iOS 15] Unable to type in Google Docs with a hardware keyboard without refoc...
Wenson Hsieh
Reported 2022-06-04 12:07:00 PDT
Attachments
Wenson Hsieh
Comment 1 2022-06-04 12:40:53 PDT
EWS
Comment 2 2022-06-06 08:57:57 PDT
Committed r295289 (251335@main): <https://commits.webkit.org/251335@main> Reviewed commits have been landed. Closing PR #1311 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.